--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,6 @@ ignore/
 /JLinkSettings.ini
 /LandLord.uvgui.*
 /OriginalFirmware
+.vscode/*
 
 .*#
-.vscode/targets.log
-.vscode/dryrun.log
-.vscode/configurationCache.log
